--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -18,7 +18,7 @@
     <item row="0" column="1">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tab_22">
        <attribute name="title">
@@ -28,11 +28,11 @@
         <item row="0" column="0">
          <widget class="QTabWidget" name="tab_Other_Items">
           <property name="currentIndex">
-           <number>7</number>
+           <number>0</number>
           </property>
           <widget class="QWidget" name="tabB_23">
            <attribute name="title">
-            <string>Tab 1</string>
+            <string>Power</string>
            </attribute>
            <layout class="QGridLayout" name="gridLayout_18">
             <item row="0" column="0">
@@ -1222,7 +1222,7 @@
           </widget>
           <widget class="QWidget" name="tab_18">
            <attribute name="title">
-            <string>Страница</string>
+            <string>Fan Speed</string>
            </attribute>
            <layout class="QGridLayout" name="gridLayout_32">
             <item row="0" column="0">
@@ -1662,6 +1662,9 @@
                    <height>21</height>
                   </rect>
                  </property>
+                 <property name="text">
+                  <string>1920x1080</string>
+                 </property>
                 </widget>
                </widget>
                <widget class="QFrame" name="frame_Signal_Format">
@@ -1870,6 +1873,9 @@
                    <height>21</height>
                   </rect>
                  </property>
+                 <property name="text">
+                  <string>1920x1080</string>
+                 </property>
                 </widget>
                </widget>
                <widget class="QFrame" name="frame_Pixel_Clock_2">
@@ -1987,6 +1993,9 @@
                    <height>21</height>
                   </rect>
                  </property>
+                 <property name="text">
+                  <string>HDMI</string>
+                 </property>
                 </widget>
                </widget>
                <widget class="QFrame" name="frame_horz_refresh">
@@ -2066,6 +2075,9 @@
                   <height>21</height>
                  </rect>
                 </property>
+                <property name="text">
+                 <string>HDMI</string>
+                </property>
                </widget>
               </widget>
               <widget class="QFrame" name="frame_Info_string">
@@ -2143,6 +2155,9 @@
                   <width>251</width>
                   <height>21</height>
                  </rect>
+                </property>
+                <property name="text">
+                 <string>1920x1080</string>
                 </property>
                </widget>
               </widget>
@@ -2344,6 +2359,9 @@
                   <height>21</height>
                  </rect>
                 </property>
+                <property name="text">
+                 <string>48</string>
+                </property>
                </widget>
               </widget>
               <widget class="QFrame" name="frame_main_source_3">
@@ -2382,6 +2400,9 @@
                   <width>251</width>
                   <height>21</height>
                  </rect>
+                </property>
+                <property name="text">
+                 <string>60Hz</string>
                 </property>
                </widget>
               </widget>
@@ -3182,7 +3203,7 @@
                </sizepolicy>
               </property>
               <property name="currentIndex">
-               <number>0</number>
+               <number>1</number>
               </property>
               <widget class="QWidget" name="tab_47">
                <attribute name="title">
@@ -15865,6 +15886,9 @@ White:</string>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="text">
+         <string>1920x1080</string>
+        </property>
        </widget>
        <widget class="QLabel" name="label_info_Resolution">
         <property name="geometry">
@@ -15893,6 +15917,9 @@ White:</string>
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
+        </property>
+        <property name="text">
+         <string>60Hz</string>
         </property>
        </widget>
        <widget class="QLabel" name="label_info_Refresh_Rate">
@@ -16323,6 +16350,9 @@ White:</string>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
+           <property name="text">
+            <string>5</string>
+           </property>
           </widget>
          </item>
          <item>
@@ -16340,6 +16370,9 @@ White:</string>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
+           <property name="text">
+            <string>3</string>
+           </property>
           </widget>
          </item>
          <item>
@@ -16356,6 +16389,9 @@ White:</string>
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
+           </property>
+           <property name="text">
+            <string>2</string>
            </property>
           </widget>
          </item>
