--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -28,7 +28,7 @@
         <item row="0" column="0">
          <widget class="QTabWidget" name="tab_Other_Items">
           <property name="currentIndex">
-           <number>0</number>
+           <number>8</number>
           </property>
           <widget class="QWidget" name="tabB_23">
            <attribute name="title">
@@ -3175,6 +3175,48 @@
             </property>
             <property name="checked">
              <bool>true</bool>
+            </property>
+           </widget>
+           <widget class="QLineEdit" name="lineEdit_com_port">
+            <property name="geometry">
+             <rect>
+              <x>700</x>
+              <y>160</y>
+              <width>113</width>
+              <height>21</height>
+             </rect>
+            </property>
+            <property name="text">
+             <string>COM3</string>
+            </property>
+           </widget>
+           <widget class="QLineEdit" name="lineEdit_ethernet">
+            <property name="geometry">
+             <rect>
+              <x>700</x>
+              <y>200</y>
+              <width>113</width>
+              <height>21</height>
+             </rect>
+            </property>
+            <property name="text">
+             <string>4444</string>
+            </property>
+           </widget>
+           <widget class="QPushButton" name="connect_button">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="geometry">
+             <rect>
+              <x>840</x>
+              <y>200</y>
+              <width>80</width>
+              <height>21</height>
+             </rect>
+            </property>
+            <property name="text">
+             <string>PushButton</string>
             </property>
            </widget>
           </widget>
