--- a/conect.ui
+++ b/conect.ui
@@ -85,6 +85,13 @@
      </property>
     </widget>
    </item>
+   <item row="2" column="0">
+    <widget class="QCheckBox" name="checkBox">
+     <property name="text">
+      <string>ВКЛ /  ВЫКЛ ОТВЕТ </string>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
